--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       margin: 0;
       font-family: 'Comic Sans MS', 'Poppins', sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      height: 100vh;
-      overflow: hidden;
+      min-height: 100vh;
+      overflow-y: auto;
       display: flex;
-      align-items: center;
       justify-content: center;
+      padding: 40px 20px;
       text-align: center;
       color: #fff;
     }
