--- a/index.html
+++ b/index.html
@@ -2,142 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Valentine’s</title>
+  <title>Be My Valentine?</title>
+
+  <!-- Cute Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+
   <style>
     body {
-      margin: 0;
-      font-family: 'Comic Sans MS', 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      min-height: 100vh;
-      overflow-y: auto;
+      background-color: #ffe6ee;
+      font-family: 'Comic Neue', cursive;
       display: flex;
       justify-content: center;
-      padding: 40px 20px;
-      text-align: center;
-      color: #fff;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.2);
-      padding: 2rem;
-      border-radius: 25px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-      max-width: 350px;
-      backdrop-filter: blur(10px);
-      animation: popIn 1s ease;
+      background: #fff0f6;
+      padding: 40px;
+      border-radius: 20px;
+      text-align: center;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      position: relative;
     }
 
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
+      color: #ff4d6d;
+      font-size: 2.5rem;
+      margin-bottom: 30px;
     }
 
-    p {
-      font-size: 1.1rem;
-      line-height: 1.5;
+    .buttons {
+      position: relative;
+      height: 100px;
     }
 
     button {
-      margin-top: 1.2rem;
-      padding: 12px 20px;
+      font-size: 1.2rem;
+      padding: 12px 25px;
+      border-radius: 30px;
       border: none;
-      border-radius: 999px;
-      background: #ff4d6d;
-      color: white;
-      font-size: 1rem;
       cursor: pointer;
-      transition: transform 0.2s, background 0.2s;
+      font-family: inherit;
     }
 
-    button:hover {
-      background: #ff1f4a;
-      transform: scale(1.05);
+    #yes {
+      background-color: #ff85a1;
+      color: white;
     }
 
-    .hidden {
-      display: none;
-      margin-top: 1rem;
-    }
-
-    @keyframes popIn {
-      from {
-        transform: scale(0.7);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .heart {
+    #no {
+      background-color: #ffd6e0;
+      color: #ff4d6d;
       position: absolute;
-      bottom: -10px;
-      color: rgba(255,255,255,0.8);
-      animation: floatUp linear infinite;
-      font-size: 20px;
+      left: 120px;
     }
 
-    @keyframes floatUp {
-      from {
-        transform: translateY(0);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-110vh);
-        opacity: 0;
-      }
+    .hearts {
+      font-size: 1.5rem;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
   <div class="card">
-    <h1>Happy Valentine’s</h1>
-    <p>
-      HIII YOUUUU 💕<br>
-      I created this only for you. 
-    </p>
+    <h1>Will you be my Valentine? 💘</h1>
 
-    <button onclick="reveal()">Click for a surprise 💌</button>
+    <div class="buttons">
+      <button id="yes">Yes 💕</button>
+      <button id="no">No 💔</button>
+    </div>
 
-    <p id="surprise" class="hidden">
-      I just wanna say this properly because sometimes I joke around too much and don’t say things clearly,
-      but I care about you, and you’re not alone even when your brain tells you otherwise.
-      Your friends care about you too, and I hope you never forget that you matter to more people than you realize,
-      especially to MEEEE, teehee. Idk what to write anymore, but I’m trying anyway, so bear with me.
-      PLEASE don’t skip meals, okay? Food is important—your brain needs fuel, love.
-      Study well and do your best, I know you’re capable of doing great!!
-      but don’t push yourself until you break. Your mental health comes first, always.
-      Grades are important, yes, but you are more important. And hey, no self-harm, alright? That’s non-negotiable.
-      If something feels too heavy, messy or confusing, come to me—
-      complain, rant, go silent with me, whatever.
-      If things ever get complicated or hard, I’m here, always, even from far away,
-      quietly supporting you and rooting for you as if im your biggest fan.<br>
-      <3
-    </p>
+    <div class="hearts">💖 💗 💓 💕</div>
   </div>
 
   <script>
-    function reveal() {
-      document.getElementById("surprise").classList.remove("hidden");
-    }
+    const noButton = document.getElementById("no");
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.innerHTML = "💗";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
-      document.body.appendChild(heart);
+    noButton.addEventListener("mouseover", () => {
+      const x = Math.random() * 200;
+      const y = Math.random() * 80;
 
-      setTimeout(() => {
-        heart.remove();
-      }, 7000);
-    }
-
-    setInterval(createHeart, 300);
+      noButton.style.left = x + "px";
+      noButton.style.top = y + "px";
+    });
   </script>
 
 </body>
